added favorites screen and listed

--- a/app/src/main/res/layout/fragment_cat_breed_detail.xml
+++ b/app/src/main/res/layout/fragment_cat_breed_detail.xml
@@ -8,7 +8,9 @@
         <variable
             name="cat"
             type="com.suatzengin.catbreeds.domain.model.CatBreed" />
-
+        <variable
+            name="favorite"
+            type="com.suatzengin.catbreeds.data.local.FavoritesModel" />
     </data>
 
     <ScrollView
