--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,49 +9,56 @@
         android:id="@+id/catBreedListFragment"
         android:name="com.suatzengin.catbreeds.presentation.cat_list.CatBreedListFragment"
         android:label="Cat Breeds"
-        tools:layout="@layout/fragment_cat_breed_list" >
+        tools:layout="@layout/fragment_cat_breed_list">
         <action
             android:id="@+id/listToDetail"
             app:destination="@id/catBreedDetailFragment"
             app:enterAnim="@anim/from_right"
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/from_left"
-            app:popExitAnim="@anim/to_right"
-            />
+            app:popExitAnim="@anim/to_right" />
         <action
             android:id="@+id/listToFavorites"
             app:destination="@id/favoritesFragment"
             app:enterAnim="@anim/from_right"
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/from_left"
-            app:popExitAnim="@anim/to_right"
-            />
+            app:popExitAnim="@anim/to_right" />
     </fragment>
     <fragment
         android:id="@+id/catBreedDetailFragment"
         android:name="com.suatzengin.catbreeds.presentation.cat_detail.CatBreedDetailFragment"
         android:label="CatBreedDetailFragment"
-        tools:layout="@layout/fragment_cat_breed_detail"
-        >
+        tools:layout="@layout/fragment_cat_breed_detail">
         <argument
             android:name="cat"
-            app:argType="com.suatzengin.catbreeds.domain.model.CatBreed" />
+            android:defaultValue="@null"
+            app:argType="com.suatzengin.catbreeds.domain.model.CatBreed"
+            app:nullable="true" />
         <action
             android:id="@+id/detailToWebView"
             app:destination="@id/webViewFragment" />
+        <argument
+            android:name="favorites"
+            android:defaultValue="@null"
+            app:argType="com.suatzengin.catbreeds.data.local.FavoritesModel"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/webViewFragment"
         android:name="com.suatzengin.catbreeds.presentation.webView.WebViewFragment"
         android:label="Cat Wikipedia"
-        tools:layout="@layout/fragment_web_view" >
+        tools:layout="@layout/fragment_web_view">
         <argument
             android:name="cat_web_view"
-            app:argType="com.suatzengin.catbreeds.domain.model.CatBreed"
-            />
+            app:argType="com.suatzengin.catbreeds.domain.model.CatBreed" />
     </fragment>
     <fragment
         android:id="@+id/favoritesFragment"
         android:name="com.suatzengin.catbreeds.presentation.favorites.FavoritesFragment"
-        android:label="FavoritesFragment" />
+        android:label="FavoritesFragment">
+        <action
+            android:id="@+id/favoritesToDetail"
+            app:destination="@id/catBreedDetailFragment" />
+    </fragment>
 </navigation>
