--- a/app/src/main/res/layout/cat_breeds_item.xml
+++ b/app/src/main/res/layout/cat_breeds_item.xml
@@ -28,7 +28,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             android:scaleType="centerCrop"
-            app:imageUrl="@{cat_breed.image.url}"
+            app:imageUrl="@{cat_breed.imageUrl}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
