--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,4 +17,8 @@
     <style name="customRatingBar" parent="Widget.AppCompat.RatingBar.Indicator">
         <item name="colorControlActivated">#FFB74D</item>
     </style>
+
+    <style name="SplashScreen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
+    </style>
 </resources>
