--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,11 +14,12 @@
         <!-- Customize your theme here. -->
 
     </style>
+
     <style name="customRatingBar" parent="Widget.AppCompat.RatingBar.Indicator">
         <item name="colorControlActivated">#FFB74D</item>
     </style>
 
     <style name="SplashScreen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-
+        <item name="android:statusBarColor">@color/white</item>
     </style>
 </resources>
