--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -52,7 +52,7 @@
     <fragment
         android:id="@+id/favoritesFragment"
         android:name="com.suatzengin.catbreeds.presentation.favorites.FavoritesFragment"
-        android:label="FavoritesFragment">
+        android:label="Favorites">
         <action
             android:id="@+id/favoritesToDetail"
             app:destination="@id/catBreedDetailFragment" />
